--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-media-dashboard",
+  "name": "political-monitor-dashboard",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-grid-layout": "^1.4.4",
+    "react-resizable": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
